--- a/bazaar/templates/bazaar/bazaar.html
+++ b/bazaar/templates/bazaar/bazaar.html
@@ -2,5 +2,24 @@
 {% load static %}
 
 {% block content %}
-<h1 class="display-4 text-success">Welcome to the magical bazaar!</h1>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-black">
+                Once upon a time this will be a bazaar filled with beautiful and usuable products.
+            </h1>
+            <div class="my-5">
+                <h4>
+                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
