--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h1 class="display-4 text-success">First test of the Sanda Bazaar!</h1>
+<img src="/media/biglogo50.webp" alt="big logo in home"></a>
+
+<h1 class=" display-4 text-success">First test of the Sanda Bazaar!</h1>
 {% endblock %}
