--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
   {% endblock %}
 
   {% block corejs %}
+  <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -41,8 +42,77 @@
   <title>Sanda Bazaar{% block extra_title %}{% endblock %}</title>
 </head>
 <body>
-  <header class="container-fluid fixed-top"></header>
-
+  <header class="container-fluid">
+    <div id="topnav" class="row bg-sanddark pt-lg-2 d-none d-lg-flex align-items-center">
+      <!-- Adjust the placement of the image and center the search bar -->
+      <div class="col-lg-4 d-flex align-items-center">
+        <!-- The navbar logo. -->
+        <img src="/media/navlogo.webp" alt="logo in navbar" class="img-fluid ml-4" style="max-width: 100px;">
+      </div>
+      <div class="col-lg-4 py-2 py-lg-4 d-flex justify-content-center"> <!-- Center the search bar text -->
+        <form method="GET" action="">
+          <div class="input-group">
+            <!-- Add a custom class "custom-search-input" for the search input -->
+            <input class="form-control border border-black rounded custom-search-input" type="text" name="q"
+              placeholder="Search our site">
+            <div class="input-group-append">
+              <button class="form-control btn border border-black rounded-pill" type="submit">
+                <span class="icon">
+                  <i class="fas fa-search"></i>
+                </span>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <!-- Account options and shopping bag aligned to the far right with col-lg-4 -->
+      <div class="col-lg-4 py-1 py-lg-0">
+        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+          <!-- Account Dropdown -->
+          <li class="list-inline-item dropdown">
+            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              <i class="fas fa-user fa-lg"></i> My Account
+            </a>
+            <div class="dropdown-menu dropdown-menu-right border-0" aria-labelledby="user-options">
+              <!-- Django template conditions for user authentication and permissions -->
+              {% if request.user.is_authenticated %}
+              {% if request.user.is_superuser %}
+              <a href="" class="dropdown-item">Product Management</a>
+              {% endif %}
+              <a href="" class="dropdown-item">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+              {% else %}
+              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+              {% endif %}
+            </div>
+          </li>
+          <!-- Shopping Bag -->
+          <li class="list-inline-item">
+            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+              <i class="fas fa-shopping-bag fa-lg"></i>
+              {% if grand_total %}
+              ${{ grand_total|floatformat:2 }}
+              {% else %}
+              $0.00
+              {% endif %}
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row bg-sandlight">
+      <nav class="navbar navbar-expand-lg navbar-light w-100">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        {% include 'includes/mobile-sale-header.html' %}
+        {% include 'includes/navbar.html' %}
+      </nav>
+    </div>
+  </header>
   {% if messages %}
   <div class="message-container"></div>
   {% endif %}
