add bazaar shop with product details and sorting

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         <img src="/media/navlogo.webp" alt="logo in navbar" class="img-fluid ml-4" style="max-width: 100px;">
       </div>
       <div class="col-lg-4 py-2 py-lg-4 d-flex justify-content-center"> <!-- Center the search bar text -->
-        <form method="GET" action="">
+        <form method="GET" action="{% url 'bazaar' %}">
           <div class="input-group">
             <!-- Add a custom class "custom-search-input" for the search input -->
             <input class="form-control border border-black rounded custom-search-input" type="text" name="q"
