--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,6 +61,22 @@ html {
 .bg-black {
   background: #000 !important;
 }
+a.category-badge > span.badge:hover {
+  background: #212529 !important;
+  color: #fff !important;
+}
+
+.btt-button {
+  height: 42px;
+  width: 42px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+
+.btt-link {
+  cursor: pointer;
+}
 
 /* -------------------------------- Media Queries */
 
@@ -83,5 +99,15 @@ html {
 
   .header-container {
     padding-top: 164px;
+  }
+}
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+  .header-container {
+    padding-top: 116px;
+  }
+
+  body {
+    height: calc(100vh - 116px);
   }
 }
