--- a/templates/includes/mobile-sale-header.html
+++ b/templates/includes/mobile-sale-header.html
@@ -7,7 +7,7 @@
         </div>
     </a>
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-        <form class="form" method="GET" action="">
+        <form class="form" method="GET" action="{% url 'bazaar' %}">
             <div class="input-group w-100">
                 <input class="form-control border border-black rounded" type="text" name="q"
                     placeholder="Search our site">
