--- a/templates/base.html
+++ b/templates/base.html
@@ -73,14 +73,13 @@
                  data-toggle="dropdown"
                  aria-haspopup="true"
                  aria-expanded="false">
-                <i class="fas fa-user fa-lg"></i> My Account
-              </a>
+                <i class="fas fa-user fa-lg"></i> My Account</a>
               <div class="dropdown-menu dropdown-menu-right border-0"
                    aria-labelledby="user-options">
                 <!-- Django template conditions for user authentication and permissions -->
                 {% if request.user.is_authenticated %}
                   {% if  request.user.is_superuser %}<a href="" class="dropdown-item">Product Management</a>{% endif %}
-                  <a href="" class="dropdown-item">My Profile</a>
+                  <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                   <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                 {% else %}
                   <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
