--- a/templates/base.html
+++ b/templates/base.html
@@ -78,10 +78,12 @@
                    aria-labelledby="user-options">
                 <!-- Django template conditions for user authentication and permissions -->
                 {% if request.user.is_authenticated %}
-                  {% if  request.user.is_superuser %}<a href="" class="dropdown-item">Product Management</a>{% endif %}
+                  {% if  request.user.is_superuser %}
+                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                  {% endif %}
                   <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                   <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                {% else %}
+                  {% else %}
                   <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                   <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                 {% endif %}
