fix media_url for images

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<img src="/media/biglogo50.webp" alt="big logo in home"></a>
+<img src="{{ MEDIA_URL }}biglogo50.webp" alt="big logo in home"></a>
 
 <h1 class=" display-4 text-success">First test of the Sanda Bazaar!</h1>
 {% endblock %}
