--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         <!-- Adjust the placement of the image and center the search bar -->
         <div class="col-lg-4 d-flex align-items-center">
           <!-- The navbar logo. -->
-          <img src="/media/navlogo.webp"
+          <img src="{{ MEDIA_URL }}navlogo.webp"
                alt="logo in navbar"
                class="img-fluid ml-4"
                style="max-width: 100px" />
