--- a/bag/templates/bag/includes/upd_rmv.html
+++ b/bag/templates/bag/includes/upd_rmv.html
@@ -1,18 +1,22 @@
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
-        let form = $(this).prev('.update-form');
-        form.submit();
-    })
+         // Prevent the default action of the link
+        e.preventDefault();
 
-// Remove item and reload on click
-$('.remove-item').click(function(e) {
-    let csrfToken = "{{ csrf_token }}";
-    let itemId = $(this).attr('id').split('remove_')[1];
-    
-    $.post(`/bag/remove/${itemId}/`, {'csrfmiddlewaretoken': csrfToken})
-     .done(function() {
-         location.reload();
-     });
-})
+        // Find the closest parent 'div.row', and then find the preceding 'div.row' that contains the form
+        let form = $(this).closest('.row').prev('.row').find('.update-form');
+        form.submit();
+    });
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        let csrfToken = "{{ csrf_token }}";
+        let itemId = $(this).attr('id').split('remove_')[1];
+        
+        $.post(`/bag/remove/${itemId}/`, {'csrfmiddlewaretoken': csrfToken})
+         .done(function() {
+             location.reload();
+         });
+    });
 </script>
