--- a/static/css/base.css
+++ b/static/css/base.css
@@ -241,6 +241,7 @@ color: #17a2b8; /* text-info */
   border-radius: 0;
 }
 
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -267,10 +268,46 @@ color: #17a2b8; /* text-info */
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
   .header-container {
-    padding-top: 116px;
+      padding-top: 116px;
   }
 
   body {
-    height: calc(100vh - 116px);
+      height: calc(100vh - 116px);
+  }
+
+  .display-4.logo-font.text-black {
+      font-size: 2rem;
+  }
+
+  .nav-link {
+      padding: 0.15rem;
+  }
+
+  .nav-link i.fa-lg {
+      font-size: 1rem;
+  }
+
+  .navbar-toggler {
+      padding: .6rem .6rem;
+      font-size: 1rem;
+  }
+
+  #delivery-banner h4 {
+      font-size: .9rem;
+  }
+
+  .btn.btn-outline-black.rounded-0,
+  .btn.btn-black.rounded-0 {
+      padding: .375rem .375rem;
+  }
+
+  .btn.btn-outline-black.rounded-0.btn-lg,
+  .btn.btn-black.rounded-0.btn-lg {
+      padding: .375rem .375rem;
+      font-size: .75rem;
+  }
+
+  .increment-qty, .decrement-qty {
+      padding: .25rem .5rem !important;
   }
 }
