fix image logic and restructure js

--- a/bazaar/templates/bazaar/bazaar.html
+++ b/bazaar/templates/bazaar/bazaar.html
@@ -82,21 +82,27 @@
             </div>
             <div class="row">
                 {% for product in products %}
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="card h-100 border-0">
-                            {% if product.image %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid"
-                                         src="{{ product.image.url }}"
-                                         alt="{{ product.name }}">
-                                </a>
-                            {% else %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid"
-                                         src="{{ MEDIA_URL }}noimage.png"
-                                         alt="{{ product.name }}">
-                                </a>
-                            {% endif %}
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="card h-100 border-0">
+                        {% if product.image_url %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="card-img-top img-fluid"
+                                     src="{{ product.image_url }}"
+                                     alt="{{ product.name }}">
+                            </a>
+                        {% elif product.image %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="card-img-top img-fluid"
+                                     src="{{ MEDIA_URL }}{{ product.image }}"
+                                     alt="{{ product.name }}">
+                            </a>
+                        {% else %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="card-img-top img-fluid"
+                                     src="{{ MEDIA_URL }}noimage.png"
+                                     alt="{{ product.name }}">
+                            </a>
+                        {% endif %}
                             <div class="card-body pb-0">
                                 <p class="mb-0">{{ product.name }}</p>
                             </div>
@@ -162,31 +168,5 @@
 {% endblock %}
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-                $('.btt-link').click(function (e) {
-                        window.scrollTo(0, 0)
-                })
-    </script>
-    <script type="text/javascript">
-        $('#sort-selector').change(function () {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-
-            var selectedVal = selector.val();
-            if (selectedVal != "reset") {
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-
-                window.location.replace(currentUrl);
-            }
-        })
-    </script>
+    <script src="{% static 'js/custom_script.js' %}"></script>
 {% endblock %}
