--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,17 +14,18 @@
         </div>
 
         {% if bag_items %}
-            {% for item in bag_items %}
-                <div class="row mb-3">
-                    <!-- Product Image -->
-                    <div class="col-12 col-md-3 text-center">
-                        {% if item.product.image %}
-                        <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
-                        {% else %}
+        {% for item in bag_items %}
+            <div class="row mb-3">
+                <!-- Product Image -->
+                <div class="col-12 col-md-3 text-center">
+                    {% if item.product.image_url %}
+                        <img class="img-fluid rounded" src="{{ item.product.image_url }}" alt="{{ item.product.name }}">
+                    {% elif item.product.image %}
+                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}{{ item.product.image }}" alt="{{ item.product.name }}">
+                    {% else %}
                         <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                        {% endif %}
-                    </div>
-
+                    {% endif %}
+                </div>
                     <!-- Product Details -->
                     <div class="col-12 col-md-9">
                         <div class="row">
