--- a/static/css/base.css
+++ b/static/css/base.css
@@ -252,6 +252,23 @@ color: #17a2b8; /* text-info */
 
 }
 
+.card-carousel {
+  height: 500px; /* Set a fixed height for the cards */
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; /* Prevents content from overflowing */
+}
+
+.card-img-top-carousel {
+  width: 100%;
+  height: 300px; /* Fixed height for images */
+  object-fit: cover;
+}
+.card-body-carousel {
+  overflow: hidden; /* Hide text that overflows the card body */
+  text-overflow: ellipsis; /* Adds an ellipsis to text that overflows */
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
