--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -27,7 +27,7 @@
         </li>
         <!-- Contact Section -->
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="contact-link">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'contact' %}" id="contact-link">
                 Contact
             </a>
         </li>
